<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    tools:context="com.i053113.interactividad">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_nom"
                android:theme="@style/MyStyleEditText"
                />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:theme="@style/MyStyleEditText"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_ape"
                android:inputType="textPassword"/>


        </android.support.design.widget.TextInputLayout>










        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_b"
            android:layout_centerInParent="true"
            android:onClick="goActivity"/>







    </RelativeLayout>
</RelativeLayout>
